clusters/common/apps/tailscale-examples/sandbox/proxyt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxyt
spec:
  selector:
    app: proxyt
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
