clusters/common/apps/tailscale-examples/sandbox/proxyt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxyt
  annotations:
    item.homer.rajsingh.info/name: "Proxyt"
    item.homer.rajsingh.info/subtitle: "Proxyt"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/cilium.png"
    item.homer.rajsingh.info/tag: "infrastructure"
    item.homer.rajsingh.info/keywords: "proxyt, network, tailscale"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "proxyt.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: proxyt
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
